# ai-workflow

./: .env.template  .gitignore  README.md  functionDefinitions.py  orchestrator.py  pyproject.toml
.devcontainer/: devcontainer.json
workflows/: release-workflow.txt
